fixed the position on media, now the screen is fixed when on mobile device

--- a/assets/style.css
+++ b/assets/style.css
@@ -525,7 +525,7 @@ iframe {
     display: block;
   }
   .nav-links {
-    position: absolute;
+    position: fixed;
     height: 40%;
     width: 200px;
     top: 0;
